# pytest-local-sam-api-gateway

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  template.yaml
src/project/: app.py
