[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Leonard Schuler <31131665+LeonardSchuler@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^1.25.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-pudb = "^0.7.0"
black = "^22.1.0"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
